# yomidroid

./: .gitignore  .gitmodules  CLAUDE.md  FEATURES.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
OcrLibrary/: build.gradle
OcrLibrary/src/main/java/com/benjaminwan/ocrlibrary/: Cls.kt  Det.kt  OcrEngine.kt  Rec.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/yomidroid/: HoshiDictsInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dojg-data.json  gamegengo-grammar.json  jlpt_vocab.json  kanji_data.json
app/src/main/assets/external-grammar/: itazuraneko-index.json
app/src/main/assets/kanji_similarity/: yencken_top.json
app/src/main/assets/popup/: popup.css  popup.html  popup.js
app/src/main/cpp/: CMakeLists.txt  dict_jni.cpp  hoshi_compat.hpp  llm_inference.cpp
app/src/main/java/com/vndict/: MainActivity.kt  VNDictApp.kt
app/src/main/java/com/vndict/anki/: AnkiConfig.kt  AnkiDroidExporter.kt
app/src/main/java/com/vndict/config/: ColorConfig.kt
app/src/main/java/com/vndict/data/: DictionaryDatabase.kt  DictionaryDb.kt  DictionaryLoader.kt
app/src/main/java/com/vndict/dictionary/: DictionaryEngine.kt  DictionaryEntry.kt  LanguageTransformer.kt
app/src/main/java/com/vndict/ocr/: OcrResult.kt
app/src/main/java/com/vndict/service/: CursorFabView.kt  OverlayTextView.kt  VNDictAccessibilityService.kt
app/src/main/java/com/vndict/ui/: AnkiSettingsScreen.kt  ColorSettingsScreen.kt
app/src/main/java/com/yomidroid/: MainActivity.kt  YomidroidApp.kt
app/src/main/java/com/yomidroid/anki/: AnkiConfig.kt  AnkiDroidExporter.kt
app/src/main/java/com/yomidroid/config/: ColorConfig.kt  DictionaryConfig.kt  HistoryConfig.kt  InputConfig.kt  OcrConfig.kt  RecommendedDictionary.kt
app/src/main/java/com/yomidroid/data/: DictionaryDatabase.kt  DictionaryDb.kt  DictionaryDownloader.kt  DictionaryImporter.kt  DictionaryLoader.kt  GlossaryExtractor.kt  HistoryPruner.kt  KanjiWordIndex.kt  YomitanConverter.kt
app/src/main/java/com/yomidroid/dictionary/: DeconjugationLabels.kt  DictionaryEngine.kt  DictionaryEntry.kt  EntrySerializer.kt  HoshiDicts.kt  HoshiEntryMapper.kt  JlptLookup.kt  KanjiSimilarity.kt  LanguageTransformer.kt  LookupResultRepository.kt
app/src/main/java/com/yomidroid/grammar/: DojgMatcher.kt  GrammarAnalyzer.kt  GrammarLibrary.kt  GrammarModels.kt  GrammarResolver.kt  Romaji.kt
app/src/main/java/com/yomidroid/kanji/: KanjiLibrary.kt
app/src/main/java/com/yomidroid/llm/: LlamaCpp.kt  ModelDownloadManager.kt
app/src/main/java/com/yomidroid/ocr/: CropCalculator.kt  GeminiFlashOcrEngine.kt  GlensOcrEngine.kt  MangaOcrEngine.kt  MangaOcrInference.kt  MangaOcrModelManager.kt  MangaOcrTokenizer.kt  MlKitOcrEngine.kt  OcrEngine.kt  OcrEngineFactory.kt  OcrPreprocessor.kt  OcrResult.kt  OcrResultRepository.kt  OcrUtils.kt  RapidOcrEngine.kt  TextPostprocessor.kt  UnifiedOcrContext.kt
app/src/main/java/com/yomidroid/service/: CursorFabView.kt  DecoupledModeTileService.kt  FabPhysicsAnimator.kt  OverlayPopupWebView.kt  OverlayTextView.kt  YomidroidAccessibilityService.kt  YomidroidTileService.kt
app/src/main/res/drawable/: ic_anki.xml  ic_history.xml  ic_launcher_foreground.xml  ic_tile.xml  ic_tile_decoupled.xml  ic_tools.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
scripts/grammar-ingest/: .gitignore  scrape_itazuraneko.py
tools/: convert_dictionaries.py  convert_jmdict.py  generate_grammar_library.py  generate_jlpt_vocab.py  mcp_history_server.py  prepare_kanji_data.py  scrape_jlptsensei.py
(+33 files in other folders)
